# PyStud

./: .gitignore  PyStud.spec  Readme.md  build.sh  pyproject.toml  requirements-all.txt  requirements.txt  setup_local.sh  tmp.py  todo.txt
PyStud/PyStud.app/Contents/: Info.plist
PyStud/PyStud.app/Contents/MacOS/: PyStud.sh
PyStud/PyStud.app/Contents/Resources/: icon-windowed.icns
src/database/: colors.csv  context.py  elements.csv
src/database/tables/: owned_table.py  project_item_table.py  project_table.py  version_table.py
src/models/: project_import.py
src/utils/: bl_image.py  colours.py  elements.py  image.py  internet.py  parts.py
src/website/: add_new_owned.py  add_new_project.py  edit_owned.py  edit_project.py  edit_project_cards.py  edit_project_list.py  layout.py  list_projects.py  main.py
src/website/tmp/: _local_file_picker.py  _progress_bar.py  _search_as_you_type.py  _table_and_slots.py  _test_post.py
test/: owned.csv  project.csv
