[project]
name = "PyStud"
description = "Project App for BrickLink"
requires-python = ">=3.13"
version = "0.1.0"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "nicegui==2.22.2",
    "pyinstaller==6.15.0",
    "requests==2.32.4",
]

[project.optional-dependencies]
dev = [
]

dynamic = ["version"]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default

[tool.ruff]
line-length = 88
exclude = []

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I"
]
ignore = [
    # line too long
    "E501"]

[tool.pyright]
include = ["src"]
